--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,4 @@
+<!--
 <!doctype html>
 <html>
 <head>
@@ -11,5 +12,20 @@
 </head>
 <body class="container">
 <app-root>Loading...</app-root>
+</body>
+</html>
+-->
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>AngularCLI</title>
+  <base href="/">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
+<body>
+<app-root></app-root>
 </body>
 </html>
